# RGBtoHDMI

./: .gitignore  README.md
src/: 8x8_font.c  8x8_font.h  CMakeLists.txt  Rounding.txt  arm-exception.c  armc-cstartup.c  armc-cstubs.c  armc-start.S  cache.c  cache.h  capture_line_atariXL_8bpp.S  capture_line_atom_4bpp.S  capture_line_atom_8bpp.S  capture_line_c64_8bpp.S  capture_line_default_4bpp.S  capture_line_default_4bpp_8bpp.S  capture_line_default_4bpp_double.S  capture_line_default_4bpp_subsample.S  capture_line_default_4bpp_subsample_even.S  capture_line_default_4bpp_subsample_odd.S  capture_line_default_8bpp.S  capture_line_default_double_4bpp_8bpp.S  capture_line_default_eightbits_8bpp.S  capture_line_default_eightbits_8bpp_16bpp.S  capture_line_default_eightbits_double_8bpp.S  capture_line_default_eightbits_double_8bpp_16bpp.S  capture_line_default_onebit_4bpp_8bpp.S  capture_line_default_sixbits_4bpp_8bpp.S  capture_line_default_sixbits_8bpp_16bpp.S  capture_line_default_sixbits_double_4bpp_8bpp.S  capture_line_default_sixbits_double_8bpp_16bpp.S  capture_line_default_twelvebits_8bpp_16bpp.S  capture_line_default_twelvebits_double_8bpp_16bpp.S  capture_line_double_4bpp_8bpp.S  capture_line_fast_4bpp_8bpp.S  capture_line_fast_eightbits_8bpp_16bpp.S  capture_line_fast_simple_16bpp.S  capture_line_fast_sixbits_4bpp_8bpp.S  capture_line_fast_sixbits_8bpp_16bpp.S  capture_line_fast_twelvebits_8bpp_16bpp.S  (+83 more)
src/fatfs/: block.h  diskio.c  diskio.h  ff.c  ff.h  ffconf.h  sdcard.c
src/jtag/: lenval.c  lenval.h  micro.c  micro.h  ports.c  update_cpld.c  update_cpld.h
src/scripts/: OLD config.txt  Readme.txt  Use_ARM_Capture.bat  Use_GPU_Capture.bat  buildvc.sh  clobber.sh  cmdline.txt  config.txt  configA.txt  configure_rpi.bat  configure_rpi.sh  configure_rpi2.bat  configure_rpi2.sh  configure_rpi3.bat  configure_rpi3.sh  configure_rpi4.bat  configure_rpi4.sh  configure_rpiA.bat  configure_rpiA.sh  configure_rpiA4.bat  configure_rpiA4.sh  configure_rpibplus.bat  configure_rpibplus.sh  configure_rpizero.bat  configure_rpizero.sh  default_config.txt  pc timings.txt  profile.txt  profile_Normal.txt  profile_OBBC.txt  profile_RGB(Analog).txt  profile_YUV.txt  release.sh  version.sh
src/scripts/Amiga_CPLD_Readme/: Amiga_Readme.txt
src/scripts/Amiga_CPLD_Readme/Amiga_2000_CPLD_Setup/: profile_6-12_BIT_RGB.txt
src/scripts/Amiga_CPLD_Readme/Amiga_CPLD_Setup/: profile_3-12_BIT_BBC.txt  profile_6-12_BIT_RGB.txt
src/scripts/Profiles/: Amstrad_CPC.txt  Amstrad_CPC_3bit.txt  Amstrad_CPC_6bit.txt  Atom CPLD.txt  Atom.txt  Atom_CPLD.txt  Atom_V1.txt  Atom_V2.txt  Atom_V6.txt  BBC Micro (192 Mhz).txt  BBC Micro 24 Mhz.txt  BBC Micro.txt  BBC_Micro.txt  BBC_Micro_24 Mhz.txt  BBC_Micro_24MHz.txt  Button_Mode.txt  CoCo3_50Hz_new75R.txt  Custom 1.txt  Custom 2.txt  Custom 4.txt  Custom.txt  Custom_1.txt  Custom_2.txt  Default.txt  Electron.txt  One_Button_Mode.txt  Oric.txt  PC CGA 2.txt  PC CGA on EGA.txt  PC CGA on VGA.txt  PC CGA.txt  PC EGA 2.txt  PC EGA on VGA.txt  PC EGA.txt  PC Hercules Txt.txt  PC Hercules.txt  PC MDA - Copy.txt  PC MDA 2.txt  PC MDA.txt  PC VGA Graphics.txt  (+16 more)
src/scripts/Profiles/(ORCHID)/: EGA.txt  MDA.txt
src/scripts/Profiles/(PC)/: EGA.txt
src/scripts/Profiles/(TSENG ET3000AX)/: CGA on VGA.txt  CGA.txt  EGA on VGA.txt  VGA Graphics.txt  VGA Text.txt
src/scripts/Profiles/3-12_BIT_BBC/: Acorn_Atom_TTL.txt  Acorn_Communicator.txt  Acorn_Electron.txt  Acorn_Teletext.txt  BBC_24Mhz_Mode_7.txt  BBC_24Mhz_Mode_7_Even.txt  BBC_Master.txt  BBC_Micro.txt  BBC_NuLA_12bpp_Mode7.txt  BBC_NuLA_3bpp_Mode7.txt  Communicator.txt  Communicator_Mode7.txt  Default.txt  Electron.txt  Master_128.txt  Mode_7_24MHz_Odd.txt  Oric.txt  RML_480Z.txt  Sam_Coupe.txt  ZX80.txt
src/scripts/Profiles/3-12_BIT_BBC_Analog/: Acorn_Electron.txt  Acorn_Teletext.txt  Amstrad_CPC.txt  BBC_24Mhz_Mode_7.txt  BBC_24Mhz_Mode_7_Even.txt  BBC_Master.txt  BBC_Micro.txt  Camputers_Lynx.txt  Custom.txt  Default.txt  Electron.txt  Harlequin_128K.txt  QL.txt  RML_480Z.txt  Sinclair_QL.txt  Spectrum_+2A+3.txt  Spectrum_+2A+3_Nuvo.txt  Spectrum_128_+2(Grey).txt  Teletext.txt
src/scripts/Profiles/3BIT_RGB/: Atom.txt  Default.txt  Master_128.txt  QL.txt  ZX80.txt
src/scripts/Profiles/3_BIT_RGB/: Atom.txt  Camputers_Lynx.txt  Communicator.txt  Custom.txt  Default.txt  Electron.txt  Master_128.txt  Master_128_24MHz.txt  Oric.txt  RML_480Z.txt  Teletext.txt
src/scripts/Profiles/6-12_BIT_RGB/: ABC80.txt  Acorn_Atom_TTL.txt  Acorn_Electron.txt  Amiga.txt  (+24 more)
src/scripts/Resolutions/: 1024x768@50Hz.txt  1280x1024 @ 50Hz.txt  1280x1024@60Hz.txt  1280x720@60Hz.txt  1280x800 @ 50Hz.txt  1368x768@50Hz.txt  1368x768@60Hz.txt  1440(1920)x1080@60Hz.txt  1440x900@50Hz.txt  1600x1200 @ 50Hz.txt  1680x1050@50Hz.txt  1680x1050@60Hz.txt  1920x1080@60Hz.txt  2560x1440@50Hz.txt  640x480@50Hz.txt  720x576 @ 50Hz.txt  800x480@50Hz.txt  800x600@60Hz.txt  Auto.txt  Auto@50Hz-60Hz-Plus.txt  Auto@50Hz-60Hz.txt  Auto@EDID.txt  Auto@Unlimited.txt  AutoForce@50Hz-60Hz.txt  AutoForce@Unlimited.txt  Default@60Hz.txt  Default@EDID.txt
src/scripts/Test_Profiles/: Default.txt
src/scripts/cpld_firmware/: Delete_This_File_To_Erase_CPLD.txt  _impact.cmd
src/scripts/firmware/: start4cd.elf  start_cd.elf
(+2138 files in other folders)
